refs #945 fix: policy document download blob handling
